--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction:  column;
   border: saddlebrown solid 3px;
+  justify-content: space-between;
   width: 414px;
 }
 
