--- a/my-app/src/components/eMais/eMais.css
+++ b/my-app/src/components/eMais/eMais.css
@@ -2,6 +2,9 @@
     margin-top: 3rem;
     width: 334px;
     height: 235px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
 }
 .eMais__titulo {
@@ -9,6 +12,8 @@
     font-size: 32px;
     text-align: center;
     color: #333333;
+    width: 290px;
+    height: 125px;
 }
 
 .eMais__texto{
@@ -16,4 +21,6 @@
     text-align: center;
     font-weight: 500;
     color: #333333;
+    width: 286px;
+    height: 95px;
 }
