--- a/my-app/src/components/intro/index.css
+++ b/my-app/src/components/intro/index.css
@@ -1,7 +1,10 @@
-.intro  {
+.intro {
     background-image: linear-gradient(158deg, #FA641E, #FF881F);
-    height: 1015px;
-    width: 414px;
+    height: 1050px;
     overflow: hidden;
-    padding-left: 15px;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
 }
