--- a/my-app/src/components/planos/planos.css
+++ b/my-app/src/components/planos/planos.css
@@ -1,7 +1,13 @@
+.planos{
+    width: 100%;
+}
 .plano {
     height: 472px;
     background-color: #FAFAFA;
     border-radius: 64px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
 }
 
 .plano__titulo {
@@ -10,6 +16,8 @@
     font-size: 24px;
     color: #333333;
     font-weight: bold;
+    padding-left: 2rem;
+    width: 100px;
 }
 
 .plano__sub-titulo {
@@ -18,11 +26,18 @@
     text-align: left;
     font-weight: 500;
     color: #666666;
+    padding-left: 2rem;
+    width: 100px;
 }
 
 .plano__itens{
     list-style-type: none;
     text-align: left;
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    padding-left: 2rem;
+    width: 100%;
 }
 
 .plano__itens__item {
@@ -49,4 +64,5 @@
     color: white;
     background-image: linear-gradient(258deg, #FA641E, #FF881F);
     border-radius: 32px;
+    align-self: center;
 }
